crates/xlate/tests/snapshots/golden_matrix__err_empty_input__gpt-4o-mini__20260910__responses_to_chat__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "messages": [],
  "max_completion_tokens": 32
}
--- headers ---
upstream_streams: false
--- degraded ---
