crates/xlate/tests/snapshots/golden_matrix__err_empty_input__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [],
  "max_completion_tokens": 32
}
--- headers ---
upstream_streams: false
--- degraded ---
