crates/xlate/tests/snapshots/golden_matrix__err_empty_input__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [],
  "max_tokens": 32
}
--- headers ---
upstream_streams: false
--- degraded ---
